# ocetrac

./: .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  meta.yaml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
ci/: environment-py3.11.yml  environment-py3.7.yml  environment-py3.8.yml
docs/: Makefile  Untitled.ipynb  api.rst  authors.md  conf.py  contribute.rst  contributing.rst  dependencies.md  dependencies.rst  dev.rst  environment.yml  examples.rst  index.rst  install.rst  installation.md  marine_heatwave_example.ipynb  more.rst  new_section_notebook.ipynb  references.md  requirements.txt  whats-new.rst  wishlist.md
docs/_static/: custom.css
docs/_templates/: globaltoc.html  navbar-more-dropdown.html
docs/examples/: DeepTrack_tutorial.ipynb  SurfTrack_tutorial.ipynb  cems2lens_with_measures.ipynb  cesm2lens_with_measures.ipynb  cmip6.ipynb  ocetrac_overview.rst
measures/: plotting.py  shape_measures.py
measures/measures_func/: motion_measures.py  plotting.py  shape_measures.py
measures/tests/: test_shape_measures.py
notebooks/: 01_preprocess.ipynb  02_track.ipynb  03_visualize.ipynb  DeepTrack_tutorial.ipynb  JOSS_example.ipynb  SurfTrack_measures_tutorial.ipynb  SurfTrack_tutorial.ipynb  SurfTrack_tutorial_restricting_time_connectivity.ipynb  SurfTrack_tutorial_temporal_neighbor_labelling.ipynb  environment.yml  ocetrac_tutorial.ipynb  track_mhws.ipynb
ocetrac/: Untitled.ipynb  __init__.py  _version.py  metrics.py  model.py  track.py  tracker.py
ocetrac/DeepTrack/: __init__.py  grid.py  tracker.py  utils.py
ocetrac/SurfTrack/: __init__.py  tracker.py
ocetrac/measures/: __init__.py  intensity_measures.py  measures_utils.py  motion_measures.py  plotting.py  shape_measures.py  temporal_measures.py  utils.py
ocetrac/plotting/: DeepTrack_plot_utils.py
ocetrac/preprocessing/: __init__.py  cesm2_lens_utils.py  preprocessing.py  utils.py
paper/: paper.bib  paper.md
subsurface_tracking/: prog_extension_ocetrac_tutorial.ipynb
tests/: Untitled.ipynb  Untitled1.ipynb  conftest.py  test_deeptrack.py  test_dummy.py  test_measures.py  test_model.py  test_surftrack.py  test_surftrack_measures.py  test_track.py
utils/: cesm_anomalies.py
(+10 files in other folders)
