[metadata]
name = ocetrac
description = Label and track unique geospatial features from gridded datasets
author = ocetrac
author_email = fmc2855@uw.edu
url = https://github.com/ocetrac/ocetrac
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

[options]
install_requires =
    numpy
    xarray
    dask
    scipy
    scikit-image
    pandas
    matplotlib
    haversine
    cftime
python_requires = >=3.10
zip_safe = False
packages = find:

[options.extras_require]
dev =
    pytest
    pytest-cov

[sdist]
formats = gztar

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = ocetrac/_version.py
